[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Sprites/Objects/BreakingPlatform.png" type="Texture" id=1]
[ext_resource path="res://src/objects/BreakingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72, 0.5 )

[node name="BreakingPlatform" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerCheckArea" type="Area2D" parent="."]

[node name="PlayerCheckCollision" type="CollisionShape2D" parent="PlayerCheckArea"]
position = Vector2( 0, -24.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="PlayerCheckArea" to="." method="_on_PlayerCheckArea_area_entered"]
